# cpp-code-template

./: .gitignore  CMakeLists.txt  bugprone-branch-clone-test.hpp  check.cpp  ordering.hpp  verbose.cc
Modules/: cxx_standard.cmake  interface_library.cmake
include/: debug.h  measure.h  string-repeat.h  validate.h  verify.h  write-wide.h
include/bits/: stdc++.h
include/common/: bit.h  hash-tuple.h  is_range.h  iterator.h  reverse.h  string_traits.h
include/extension/: concepts.h  config.h  define_bool.h  define_concept.h  nullptr.h  type_traits.h
include/extension/bit/: bit_cast.h
include/extension/detail/: complete_check.h  first_type.h  referenceable.h  test_result.h
include/extension/functional/: invoke.h  mem_fn.h  ranges.h  unwrap_ref.h
include/extension/iterator/: make_reverse_iterator.h
include/extension/type_traits/: add_cv.h  add_lvalue_reference.h  add_pointer.h  add_rvalue_reference.h  bounded_array_traits.h  common_reference.h  conditional.h  copy_cv.h  decay.h  enable_if.h  integral_constant.h  is_array.h  is_class.h  is_const.h  is_final.h  is_function.h  is_invocable.h  is_lvalue_reference.h  is_nothrow_convertible.h  is_pointer.h  is_reference.h  is_rvalue_reference.h  is_same.h  is_trivially_copyable.h  is_union.h  is_void.h  is_volatile.h  lib_type_traits.h  logical_traits.h  remove_all_extents.h  remove_cv.h  remove_cvref.h  remove_extent.h  remove_pointer.h  remove_reference.h  sizeable-03.h  type_identity.h  void_t.h
include/extension/utility/: declval-03.h  exchange.h
include/leetcode/: list-node.h  tree-node.h
include/misc/: allocator.h  allocator2.h  assert_avoid_nop.h  bit.h  combine.h  disjointset.h  hash-tuple.h  make-collection.h  matrix-multiplication.hpp  max-min.h  mdc.h  pam.h  range_set.hpp  reverse.h  segment_tree_search.hpp
online-test/: a.cpp  b.cpp  c.cpp
src/: leetcode.cpp  oj.cpp  other.cpp  solution.hpp
src/misc/: allocator.h  combine.tcc  matrix-multiplication.tcc  max-min.h  pam.tcc
tests/: bit-test.c  bit-test.cpp  c++20-test.cpp  debug-test-98.cpp  debug-test.cpp  hash-tuple-test.cpp  hash_tuple-test.cpp  invoke-test.cpp  list-node-test.cpp  logical_traits-test.cpp  reverse-test.cpp  stability-test.cpp  static_assert.h  stl-test.cpp  test.cpp  tree-node-test.cpp  vector-test.cpp  write-wide-test.cpp
